# lottery_analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  HANDOFF_AGENT.md  dashboard.py  main.py  pyproject.toml  schedule_task.py
src/: __init__.py
src/analysis/: __init__.py  advanced_stats.py  backtester.py  bayesian.py  feature_engine.py  lstm_predictor.py  markov.py  monte_carlo.py  prediction_report.py  predictor.py  statistics.py
src/collector/: __init__.py  fetcher.py  parser.py
src/models/: __init__.py  lottery.py
src/storage/: __init__.py  database.py
src/utils/: logging_config.py
tests/: test_database.py  test_models.py  test_parser.py  test_predictor.py  test_statistics.py
