[project]
name = "lottery-analysis"
version = "0.1.0"
description = "Korean Pension Lottery 720+ Data Analysis Project"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0", "beautifulsoup4>=4.12.0", "lxml>=4.9.0"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3.0"]
dashboard = ["streamlit>=1.28.0", "pandas>=2.0.0"]
dev = ["pytest>=7.4.0", "black>=23.0.0", "ruff>=0.1.0", "mypy>=1.5.0", "pre-commit>=3.5.0"]
all = ["scikit-learn>=1.3.0", "streamlit>=1.28.0", "pandas>=2.0.0"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
